--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <script>
       //Your web app's Firebase configuration
-
+      var firebaseConfig = {
+    apiKey: "AIzaSyBZv6U0v8ghL44zdI4fjUPeKHQIX5oi5Ww",
+    authDomain: "car-racing-game-254f9.firebaseapp.com",
+    databaseURL: "https://car-racing-game-254f9.firebaseio.com",
+    projectId: "car-racing-game-254f9",
+    storageBucket: "car-racing-game-254f9.appspot.com",
+    messagingSenderId: "505452782169",
+    appId: "1:505452782169:web:a6bae99a920a82a9c8c748"
+  };
       // // Initialize Firebase
       // firebase.initializeApp(firebaseConfig);
 
